--- a/Midas form/formulario-def.html
+++ b/Midas form/formulario-def.html
@@ -661,7 +661,7 @@
             <div class="FR red">
                 <center>
                 <span class="s-I" style="width: 300px; margin-left: -30px;"> 
-                    <img src="https://i.imgur.com/hPH2daz.png" style="height:450px; width: 310px;  text-decoration: none; border-radius:0px;
+                    <img src="https://i.imgur.com/YiH62Yk.png" style="height:450px; width: 310px;  text-decoration: none; border-radius:0px;
     box-shadow:0 0 0px 0px #fff; margin-top: 50px;"></span>
 
                <!--  <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: 30px;">
@@ -669,9 +669,9 @@
                    <img src="https://i.imgur.com/yCw3aET.jpg" style="height:400px; width:300px; text-decoration: none; margin-left: -30px; margin-bottom: ">
                 </span>-->
 
-                <span class="s-III" style="margin-top: 50px;">
+                <span class="s-III" style="margin-top: 30px;">
                
-                    <input type="button" name="send" id="send" style="text-align: center; background-color:#ffa809; color: white; border: none; border-radius: 2px; width: 230px; cursor: pointer; margin-left: 5px; margin-bottom: 40px" value="VISITA NUESTRA WEB">
+                    <input type="button" name="send" id="send" style="text-align: center; background-color:#ffa809; color: white; border: none; border-radius: 2px; width: 230px; cursor: pointer; margin-left: 5px; margin-bottom: 60px" value="VISITA NUESTRA WEB">
                
                 </span>
                     </center>
