--- a/Falabella6/Venetian320x480.html
+++ b/Falabella6/Venetian320x480.html
@@ -2191,7 +2191,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i75.image.css:image/base/css*/
 #i75 { opacity: 1; }
 /*#/#*//*#i75.i76.positioning.css:positioning/base/css.2*/
-#i75 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 146px; height: 36px;
+#i75 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 146px; height: 41px;
         -ms-transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
@@ -2327,7 +2327,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i75.image.html:image/html-->
-<img id="i75" src="https://i.imgur.com/vf5nk8i.png"/>
+<img id="i75" src="https://i.imgur.com/8ueWCdQ.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
@@ -2450,7 +2450,7 @@ var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
     /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
