--- a/Falabella6/Venetian300x600.html
+++ b/Falabella6/Venetian300x600.html
@@ -2246,7 +2246,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i73.image.css:image/base/css*/
 #i73 { opacity: 1; }
 /*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
-#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 135px; height: 34px;
+#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 131px; height: 37px;
         -ms-transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
@@ -2315,7 +2315,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i42.image.html:image/html-->
 <img id="i42" src="https://i.imgur.com/0caj6mK.png"/>
 <!--#/#--><!--#i73.image.html:image/html-->
-<img id="i73" src="https://i.imgur.com/vf5nk8i.png"/>
+<img id="i73" src="https://i.imgur.com/8ueWCdQ.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
@@ -2436,7 +2436,7 @@ var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
     /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
