--- a/Moyo/Venetian.html
+++ b/Moyo/Venetian.html
@@ -2336,12 +2336,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i108" src="https://i.imgur.com/TKiK6Yr.jpg"></dataimg>
 <!--#/#--><!--#i2.i105.slice-image.html:slice-image/html.1-->
 <dataimg id="i105" src="https://i.imgur.com/7BzilNr.jpg"></dataimg>
+<!--#/#--><!--#i2.i111.slice-image.html:slice-image/html.1-->
+<dataimg id="i111" src="https://i.imgur.com/oA4j8Cy.gif"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/eKpci6p.jpg"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/ADxRXpU.jpg"></dataimg>
-<!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/1l5pt6j.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i74.image.html:image/html-->
@@ -2418,11 +2418,11 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i105.slice-image.js:slice-image/base/js.1*/
 
+/*#/#*//*#i2.i111.slice-image.js:slice-image/base/js.1*/
+
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
-
-/*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i74.image.js:image/base/js*/
 
@@ -2570,12 +2570,13 @@ customName: false;
 /*#/#*//*#i2.i105.slice-image.meta:slice-image/meta.1*/
 name: 7BzilNr.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
+/*#/#*//*#i2.i111.slice-image.meta:slice-image/meta.1*/
+name: oA4j8Cy.gif; fileId: ; sourceTypeId: externalUrl;
+customName: false;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: eKpci6p.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: ADxRXpU.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: 1l5pt6j.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i74.image.meta:image/meta*/
@@ -2589,8 +2590,8 @@ customName: 1;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i106.image.meta:image/meta*/
-name: NwEDeCl.gif; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: ICONO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i106.i107.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i46.image.meta:image/meta*/
