--- a/Moyo/Venetian300x600.html
+++ b/Moyo/Venetian300x600.html
@@ -2334,10 +2334,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i73" src="https://i.imgur.com/rpVxedQ.jpg"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/r6kVNWI.jpg"></dataimg>
-<!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/kKPFisr.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/sWevGH9.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/QCEAPyu.jpg"></dataimg>
+<!--#/#--><!--#i2.i86.slice-image.html:slice-image/html.1-->
+<dataimg id="i86" src="https://i.imgur.com/ONi5Ald.gif"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
@@ -2414,9 +2414,9 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
-
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
+
+/*#/#*//*#i2.i86.slice-image.js:slice-image/base/js.1*/
 
 /*#/#*//*#i42.image.js:image/base/js*/
 
@@ -2434,6 +2434,10 @@ bmShow('i74');
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
 bmShow('i16');
+/*#/#*//*#i68.image.js:image/base/js*/
+
+/*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
+bmShow('i68');
 /*#/#*//*#i78.i79.positioning.js:positioning/base/js.2*/
 bmShow('i78');
 /*#/#*//*#i78.i80.actions.js:actions/base/js.1*/
@@ -2449,10 +2453,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i68.image.js:image/base/js*/
-
-/*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
-bmShow('i68');
 /*#/#*//*#i82.i83.positioning.js:positioning/base/js.2*/
 bmShow('i82');
 /*#/#*//*#i82.i84.actions.js:actions/base/js.1*/
@@ -2555,10 +2555,11 @@ name: rpVxedQ.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: r6kVNWI.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: kKPFisr.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: sWevGH9.jpg; fileId: ; sourceTypeId: externalUrl;
+name: QCEAPyu.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i86.slice-image.meta:slice-image/meta.1*/
+name: ONi5Ald.gif; fileId: ; sourceTypeId: externalUrl;
+customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
