--- a/Moyo/Cube.html
+++ b/Moyo/Cube.html
@@ -929,7 +929,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">¡Moyo contiene probióticos que ayudan a tu salud digestiva!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/NqSl9s1.jpg"/>
+<img id="i58" src="https://i.imgur.com/0mB8Vol.gif"/>
 <!--#/#--><!--#i5.i338.image.html:image/html-->
 <img id="i338" src="https://i.imgur.com/7zMVwDY.png"/>
 <!--#/#--><!--#i5.i340.image.html:image/html-->
@@ -949,7 +949,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¡Tienes tus nuevas VANS a la vuelta de la esquina!</div>
+<div id="i34"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/XKQHr2S.jpg"/>
 <!--#/#--><!--#i6.i370.image.html:image/html-->
