--- a/Beat3/Slider_300x250.html
+++ b/Beat3/Slider_300x250.html
@@ -189,7 +189,7 @@
             width: 125px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 48px;
+            margin-left: 35px;
             background-color: #;
             padding: 5px;
             border-radius: 20px;
@@ -202,17 +202,17 @@
 </head>
 <body class="desafio" style="margin:0px;">
 	 <div class="te-container">
-     <a href="https://thebeat.co/cl/" target="_blank">
+     <a href="https://thebeat.co/co/" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
               
-                <div class="te-images"> <img src="https://i.imgur.com/82zeZQn.jpg" alt="" /> <img src="https://i.imgur.com/xzJOjK3.gif" alt="" /> <img src="https://i.imgur.com/Jkj8ceV.jpg" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/82zeZQn.jpg" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/gXpq5qC.jpg" alt="" /> <img src="https://i.imgur.com/auJ94gh.gif" alt="" /> <img src="https://i.imgur.com/xS5sGwr.jpg" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/gXpq5qC.jpg" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
                 </div>
-                <div style="margin-top:30px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000028; font-size:17px; ">TU CONDUCTOR, TU RUTA, TU CIUDAD.</span> 
+                <div style="margin-top:25px;">
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000028; font-size:17px; ">¿Quiéres llegar lejos? Te Llevamos.</span> 
 
                         <div class="cta" > <img src="https://i.imgur.com/45MatRy.png" style="height: 55px;"></a></div>
 
@@ -220,11 +220,11 @@
                 </div>
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-top:12px;margin-left:7px;"> <span> 
 
-                    <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://thebeat.co/cl/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/xmmtEoi.png" title="compartir en facebook" width="22" /></a>
+                    <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://thebeat.co/co/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/xmmtEoi.png" title="compartir en facebook" width="22" /></a>
 
-                    <a class="shared" href="whatsapp://send?text=¡Mira lo que he encontrado! //thebeat.co/cl/" target="_blank"> <img alt="compartir en Whatsapp" class="googlei" height="22" src="https://i.imgur.com/N1Dx0zi.png" title="compartir en Whatsapp" width="22" /></a>
+                    <a class="shared" href="whatsapp://send?text=¡Mira lo que he encontrado! https://thebeat.co/co/" target="_blank"> <img alt="compartir en Whatsapp" class="googlei" height="22" src="https://i.imgur.com/N1Dx0zi.png" title="compartir en Whatsapp" width="22" /></a>
 
-                    <a class="shared" href="https://twitter.com/home?status=https://thebeat.co/cl/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/wcvnPXW.png" title="compartir en twitter" width="22" /></a> </span></div>
+                    <a class="shared" href="https://twitter.com/home?status=https://thebeat.co/co/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/wcvnPXW.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
