--- a/Beat3/Fade320x480.html
+++ b/Beat3/Fade320x480.html
@@ -8,7 +8,7 @@
     <meta name="ad.size" content="width=320, height=480" />
     <title>320x480 -bf</title>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source Sans Pro:300,700,900" rel="stylesheet">
     <style>
         body.bf {
             background-color: #FFFFFF;
@@ -60,19 +60,19 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/wKa4gHV.gif");
+            background: url("https://i.imgur.com/Iw0b12q.jpg");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/IlqauHU.png");
+            background: url("https://i.imgur.com/wKa4gHV.gif");
             background-size: cover;
 
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/PVkwIJl.png");
+            background: url("https://i.imgur.com/fydDFfT.jpg");
             background-size: cover;
           
         }
@@ -122,12 +122,12 @@
             width: 98%;
             padding: 0.3em;
             line-height: 1em;
-            color: #453936;
+            color: #000028;
         }
 
         .bf_text_title {
-            font-size: 160%;
-            color: #453936;
+            font-size: 130%;
+            color: #000028;
             display: inline-block;
             width: 95%;
             margin-bottom: -40px;
@@ -146,7 +146,7 @@
         }
 
         .bf_text_bold {
-            font-weight: 900;
+            font-weight: 600;
         }
 
         .bf_text_small {
@@ -274,7 +274,7 @@
             width: 70px;
             display: inline-block;
             float: right;
-             font-family: 'Lato', sans-serif;
+             font-family: 'Source Sans Pro', sans-serif;
         }
 
         .bf_button {
@@ -342,7 +342,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("https://thebeat.co/cl/");
+            window.open("https://thebeat.co/co/");
         }
     </script>
 </head>
@@ -364,7 +364,7 @@
         </div>
         <div class="bf_text"> 
             <span class="bf_text_title bf_text_bold">
-             TU CONDUCTOR, <br> TU RUTA, TU CIUDAD.
+               No preocuparte por estacionar suena increíble. 
             </span>
             <br/>  
           <!--  <span class="bf_text_light bf_text_small" style="color:black;">
