--- a/Beat3/FadeBig.html
+++ b/Beat3/FadeBig.html
@@ -351,7 +351,7 @@
 <body class="tgx">
     <a href= "https://thebeat.co/co/" target="_blank">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
-        <div class="cta"><img src="https://i.imgur.com/nXTygJY.png" style="height: 60px;"></div>
+        <div class="cta"><img src="https://i.imgur.com/45MatRy.png" style="height: 60px;"></div>
        
         <div class="tgx_cover bg cover-1 carousel-item item-1">
             <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"></span></div>
