--- a/Beat3/FadeBig.html
+++ b/Beat3/FadeBig.html
@@ -369,7 +369,7 @@
             </span>
             <br/>
              <span class="tgx_text tgx_text_small" style="margin-top:-20px; margin-left: -5px; font-size: 135%;">
-                <p>Y viaja por la ciudad. Viajes desde $4,000.</p>
+                <p>Y viaja por la ciudad. <br> Viajes desde $4,000.</p>
             </span>
   
             </div>
