--- a/Beat3/Cube.html
+++ b/Beat3/Cube.html
@@ -869,7 +869,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/Snyyarz.jpg"/>
+<img id="i130" src="https://i.imgur.com/dMB6W84.jpg"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/ocSzabB.png"/>
 <!--#/#--><!--#i4.i380.image.html:image/html-->
@@ -889,7 +889,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/bfSCVW7.gif"/>
+<img id="i58" src="https://i.imgur.com/3c5HT3z.jpg"/>
 <!--#/#--><!--#i5.i394.image.html:image/html-->
 <img id="i394" src="https://i.imgur.com/PuxJURZ.png"/>
 <!--#/#--><!--#i5.i396.image.html:image/html-->
@@ -909,7 +909,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/96TKkEv.jpg"/>
+<img id="i60" src="https://i.imgur.com/hPlHGtr.jpg"/>
 <!--#/#--><!--#i6.i400.image.html:image/html-->
 <img id="i400" src="https://i.imgur.com/ocSzabB.png"/>
 <!--#/#--><!--#i6.i398.image.html:image/html-->
@@ -1011,7 +1011,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://thebeat.co/co/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://thebeat.co/co/), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1090,7 +1090,7 @@ var el = document.getElementById('i386');
 
 el.addEventListener('click', function(e){
     /*#i388.i389.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://thebeat.co/co/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://thebeat.co/co/), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1169,7 +1169,7 @@ var el = document.getElementById('i406');
 
 el.addEventListener('click', function(e){
     /*#i408.i409.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://thebeat.co/co/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://thebeat.co/co/), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
