--- a/Smirnoff/ZoomExp300x600.html
+++ b/Smirnoff/ZoomExp300x600.html
@@ -174,7 +174,7 @@ a {text-decoration: none;}
          
         
    
-<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none; cursor: pointer;">
+<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none; cursor: pointer;margin-left:15px;">
   <ol>
     <li>
       <img src="https://i.imgur.com/sazYKpX.jpg">
