--- a/Smirnoff/Cube.html
+++ b/Smirnoff/Cube.html
@@ -914,7 +914,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/Nv8Vi3m.png"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">REVIVIENDO A LOS MUERTOS</div>
+<div id="i14">REVIVIENDO A LOS MUERTOS.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/qh4a0sK.jpg"/>
 <!--#/#--><!--#i4.i406.image.html:image/html-->
@@ -961,7 +961,7 @@ url('fonts/') format('svg');
 <img id="i452" src="https://i.imgur.com/Nv8Vi3m.png"/>
 <!--#/#--><!--#i6.i418.text.html:text/html-->
 <div id="i418">REVOLUCIONANDO 
-LO ESTABLECIDO</div>
+LO ESTABLECIDO.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i424.image.html:image/html-->
