--- a/Smirnoff/Slider_300x250.html
+++ b/Smirnoff/Slider_300x250.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Trebuchet MS:400,400i,700,700i" rel=stylesheet>
     <title>Slider_300x250</title>
 	  <style>
 		.desafio a,
@@ -28,7 +28,7 @@
             width: 300px;
             height: 250px;
             overflow: hidden;
-            font-family: Source Sans Pro;
+            font-family: Trebuchet MS; 
         }
           
           
