--- a/Smirnoff/Fade320x480.html
+++ b/Smirnoff/Fade320x480.html
@@ -7,13 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
     <title>Fade_320x480</title>
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Trebuchet MS:400,400i,700,700i" rel=stylesheet>
     <style>
         body.bf {
             background-color: #FFFFFF;
             color: black;
-            font-family: Source Sans Pro;
+            font-family: Trebuchet MS; 
             margin: 0;
             padding: 0;
         }
@@ -28,7 +27,7 @@
             position:absolute;
             overflow:hidden;
             cursor: pointer;
-            font-family: Source Sans Pro;
+            font-family: Trebuchet MS; 
             border: 1px solid #c5c5c5
                 
         }
@@ -274,7 +273,7 @@
             width: 70px;
             display: inline-block;
             float: right;
-             font-family: 'Lato', sans-serif;
+             font-family: Trebuchet MS; 
         }
 
         .bf_button {
