--- a/Smirnoff/Slider_300x250.html
+++ b/Smirnoff/Slider_300x250.html
@@ -219,12 +219,12 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:25px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:16px; ">¡SMIRNOFF INSPIRA <br> LA REVOLUCIÓN DE COCTELES! </span></br> 
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:16px; ">¡SMIRNOFF INSPIRA <br> LA REVOLUCIÓN DE CÓCTELES! </span></br> 
 
                         <div class="cta" > <img src="https://i.imgur.com/D7gXPSp.png" style="height: 40px;"></a></div>
 
                         <img class="logo" style="margin-top: 3px;" src="https://i.imgur.com/Nv8Vi3m.png" alt=""> </div>
-                </div>
+                
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-top:7px;margin-left:7px;"> <span> 
 
                     <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.smirnoff.com/es-mx/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/b6cR7oL.png" title="compartir en facebook" width="22" /></a>
