--- a/Beat3/FadeBig.html
+++ b/Beat3/FadeBig.html
@@ -61,12 +61,12 @@
         }
 
         .bg.cover-1 {
-           background: url("https://i.imgur.com/2xc4dTP.jpg");
+           background: url("https://i.imgur.com/bjoRKMt.jpg");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/5g7J14S.jpg");
+            background: url("https://i.imgur.com/iEWT9Rx.jpg");
             background-size: cover;
 
             
