--- a/Beat3/Fade320x480.html
+++ b/Beat3/Fade320x480.html
@@ -60,7 +60,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/nj9QA3z.jpg");
+            background: url("https://i.imgur.com/ETWn4Si.jpg");
             background-size: cover;
         }
 
@@ -72,7 +72,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/OKw78Vs.jpg");
+            background: url("https://i.imgur.com/SSxSI5A.jpg");
             background-size: cover;
           
         }
