--- a/Beat3/Cube.html
+++ b/Beat3/Cube.html
@@ -869,7 +869,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/dMB6W84.jpg"/>
+<img id="i130" src="https://i.imgur.com/tfwdj3N.jpg"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/ocSzabB.png"/>
 <!--#/#--><!--#i4.i380.image.html:image/html-->
