--- a/McCormick2/FadeBig.html
+++ b/McCormick2/FadeBig.html
@@ -66,7 +66,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/Od25d4s.gif");
+            background: url("https://i.imgur.com/ZQ1Zs0C.gif");
             background-size: cover;
             
         }
@@ -341,7 +341,7 @@
 </head>
 
 <body class="tgx">
-    <a href= "https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/" target="_blank">
+    <a href= "https://www.kiwilimon.com/receta/carnes-y-aves/chimichanga-de-arrachera" target="_blank">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
         <div class="cta"><img src="https://i.imgur.com/pYIZSo5.png" style="height: 45px;"></div>
        
@@ -370,13 +370,13 @@
 
          <!--   <div id="botones-para-compartir" style="display:inline;float:left;margin-left:5px; margin-top: 568px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://www.kiwilimon.com/receta/carnes-y-aves/chimichanga-de-arrachera"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="25" src="https://i.imgur.com/brcaBmD.png" title="compartir en facebook" width="25" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado  https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/" target="block">
+                            <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado  https://www.kiwilimon.com/receta/carnes-y-aves/chimichanga-de-arrachera" target="block">
                             <img alt="compartir en whatsapp" class="googlei" height="25" src="https://i.imgur.com/cPJnhfU.png" title="compartir en whatsapp" width="25" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://www.kiwilimon.com/receta/carnes-y-aves/chimichanga-de-arrachera" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="25" src="https://i.imgur.com/AGEmiBA.png" title="compartir en twitter" width="25" /></a>
                     </span>
                 </div>-->
