--- a/McCormick2/FadeBig.html
+++ b/McCormick2/FadeBig.html
@@ -357,7 +357,7 @@
        
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-             ¡Ya llegó la nueva Mayonesa con Guacamole!
+             ¡Disfruta de unas sabrosas chimichangas!
             </span>
             <br/>
              <span class="tgx_text tgx_text_small" style="margin-top:-6px;">
