--- a/HUAWEI P30 PRO/Cube_300x600.html
+++ b/HUAWEI P30 PRO/Cube_300x600.html
@@ -981,7 +981,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i377.text.html:text/html-->
 <div id="i377">P30 Pro</div>
 <!--#/#--><!--#i4.i379.text.html:text/html-->
-<div id="i379">Un deleite de colores, contempla la belleza de un atardecer.</div>
+<div id="i379">Un deleite de colores, contempla la belleza de un gran atardecer.</div>
 <!--#/#--><!--#i4.i375.text.html:text/html-->
 <div id="i375">HUAWEI</div>
 <!--#/#--><!--#i4.i367.image.html:image/html-->
